Add generalization to support OrchardZSA and AssetBase (#1)
* Copy updated src folder from librustzcash/zsa1

* Cherry-pick the latest update of zcash_note_encryption from zcash/librustzcash (it was missed in QED-it/librustzcash)

* Upgrade Rust version

* Upgrade Rust version to 1.65

* Add --features=alloc to command line for build-nodefault jon in ci.yml

* Downgrade Rust version back to 1.61.0

---------

Co-authored-by: Dmitry Demin <dmitry@qed-it.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Add target
         run: rustup target add ${{ matrix.target }}
       - name: Build crate
-        run: cargo build --no-default-features --verbose --target ${{ matrix.target }}
+        run: cargo build --features=alloc --no-default-features --verbose --target ${{ matrix.target }}
 
   bitrot:
     name: Bitrot check
